# mcp-hooker

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
docs/: RUNBOOK.md  voicebot-caflou-mcp.md
examples/: caflou.accounts.patch.yaml  tools_filter.example.yaml
mcp_hooker/: __init__.py  route_filters.py  schema_sanitizer.py  server.py  settings.py  spec_loader.py
scripts/: caflou_rebuild_projects.py  caflou_sync_mcp_project.py  caflou_sync_voicebot_project.py  verify_mcp_tool_count.py
tests/: test_route_filters.py  test_schema_sanitizer.py
