[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-hooker"
version = "0.1.0"
description = "Configurable FastMCP server that exposes any OpenAPI spec as MCP tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Karel Matějovský" }]
dependencies = [
    "fastmcp>=3.0.0",
    "yayaya>=0.3.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
mcp-hooker = "mcp_hooker.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_hooker*"]

[tool.ruff]
line-length = 100
target-version = "py310"
